--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: status_bar_control_example
-description: Demonstrates how to use the status_bar_control plugin.
+name: status_bar_control_plus_example
+description: Demonstrates how to use the status_bar_control_plus plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,7 +38,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  status_bar_control:
+  status_bar_control_plus:
     path: ../
 
   # The "flutter_lints" package below contains a set of recommended lints to
