--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
-name: status_bar_control
-description: Status Bar Control, lets you control the status bar color, style (theme), visibility, and translucent properties across iOS and Android.
-version: 3.2.1
-homepage: https://github.com/rafaelmaeuer/flutter_statusbar_control
+name: status_bar_control_plus
+description: Status Bar Control Plus, lets you control the status bar color, style (theme), visibility, and translucent properties across iOS and Android.
+version: 3.3.0
+homepage: https://github.com/Gulshank61/statusbar_control_plus
 
 dependencies:
   flutter:
     sdk: flutter
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
-  flutter: ">=1.12.0"
+  sdk: ^3.9.0
+  flutter: '>=3.3.0'
 
 dev_dependencies:
   flutter_test:
@@ -19,7 +19,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.foo.statusbarcontrol
-        pluginClass: StatusBarControlPlugin
+        package: com.foo.statusbarcontrolplus
+        pluginClass: StatusBarControlPlusPlugin
       ios:
-        pluginClass: StatusBarControlPlugin
+        pluginClass: StatusBarControlPlusPlugin
